# speech2text

./: README.md  pyproject.toml
src/speech2text/: main.py
